правки по страницам

--- a/order-list.html
+++ b/order-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ZZ-logistics вход</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="mobile-body">
@@ -12,7 +12,7 @@
     <include src="build/img/sprite.svg"></include>
 </div>
 
-<div class="container menu-padding">
+<div class="container new-order-padding">
     <div class="pt-30">
         <div class="small-logo">
             <svg width="13" height="15"><use href="#logo-sm"></use></svg>
