--- a/buyback-orders.html
+++ b/buyback-orders.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ZZ-logistics вход</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="mobile-body">
@@ -12,11 +12,11 @@
     <include src="build/img/sprite.svg"></include>
 </div>
 
-<div class="container menu-padding">
+<div class="container po-pay-padding">
     <div class="pt-30">
         <div class="small-logo">
             <svg width="13" height="15"><use href="#logo-sm"></use></svg>
-            <p class="title">История транзакций</p>
+            <p class="title">Заказы на выкуп</p>
         </div>
 
         <div class="order-info">
@@ -26,11 +26,13 @@
         <!--    Товар №1    -->
         <div class="product">
             <div class="product__link">
-                <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
-                <strong class="grow-1">Товар №1</strong>
-                <button class="icon-btn icon-btn--white mr-10" onclick="this.parentElement.parentElement.classList.toggle('active')">
-                    <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
-                </button>
+                <div class="d-flex align-center grow-1 mr-10" onclick="this.parentElement.parentElement.classList.toggle('active')">
+                    <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
+                    <strong class="grow-1">Товар №1</strong>
+                    <button class="icon-btn icon-btn--white">
+                        <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
+                    </button>
+                </div>
                 <button class="icon-btn icon-btn--white"  onclick="document.getElementById('modal').classList.add('active')">
                     <svg width="10" height="10"><use href="#i-close"></use></svg>
                 </button>
@@ -119,11 +121,13 @@
         <!--    Товар №2    -->
         <div class="product ">
             <div class="product__link">
-                <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
-                <strong class="grow-1">Товар №2</strong>
-                <button class="icon-btn icon-btn--white mr-10">
-                    <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
-                </button>
+                <div class="d-flex align-center grow-1 mr-10" onclick="this.parentElement.parentElement.classList.toggle('active')">
+                    <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
+                    <strong class="grow-1">Товар №2</strong>
+                    <button class="icon-btn icon-btn--white">
+                        <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
+                    </button>
+                </div>
                 <button class="icon-btn icon-btn--white">
                     <svg width="10" height="10"><use href="#i-close"></use></svg>
                 </button>
@@ -219,7 +223,7 @@
         <div class="to-pay">
             <div class="to-pay__link" onclick="this.parentElement.classList.toggle('active')">
                 <div class="d-flex align-center">
-                    <span class="identifier">
+                    <span class="mr-15">
                         <svg width="20" height="20"><use href="#i-cart"></use></svg>
                     </span>
                     <strong class="text-uppercase">к оплате</strong>
@@ -279,7 +283,7 @@
                 </div>
 
                 <a href="#" class="btn btn--yellow">
-                    <span>оформить заказ</span>
+                    <span>Сохранить</span>
                     <svg width="6" height="10"><use href="#i-arrow"></use></svg>
                 </a>
             </div>
