--- a/manager-orders.html
+++ b/manager-orders.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ZZ-logistics вход</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="mobile-body">
@@ -19,7 +19,7 @@
             <p class="title">Список заказов</p>
         </div>
 
-        <div class="order pb-40">
+        <div class="order pb-60">
             <div class="order__top">
                 <strong class="text-uppercase grow-1">Заказ на выкуп №1</strong>
                 <span>21.04.2019</span>
@@ -51,9 +51,12 @@
                             <option value="">Получен</option>
                         </select>
                     </div>
-                    <button class="icon-btn ml-5">
+                    <!--           Демонстрация работы         -->
+                    <button class="icon-btn ml-5" onclick="this.previousElementSibling.classList.remove('d-none');
+                                                            this.previousElementSibling.previousElementSibling.classList.add('d-none')">
                         <svg width="15" height="15"><use href="#i-edit"></use></svg>
                     </button>
+
                     <button class="icon-btn ml-5" disabled>
                         <svg width="15" height="15"><use href="#i-save"></use></svg>
                     </button>
@@ -68,22 +71,24 @@
         <div class="tabs mb-40">
             <ul class="tabs-nav reset-list">
                 <li class="tabs-nav__item">
-                    <a href="#" class="tabs-nav__link " onclick="toggleTabs('redemption-of-goods', this)">выкуп товара</a>
+                    <a href="#" class="tabs-nav__link active" onclick="toggleTabs('redemption-of-goods', this)">выкуп товара</a>
                 </li>
                 <li class="tabs-nav__item">
-                    <a href="#" class="tabs-nav__link active" onclick="toggleTabs('additional-services', this)">дополнительные<br> услуги</a>
+                    <a href="#" class="tabs-nav__link " onclick="toggleTabs('additional-services', this)">дополнительные<br> услуги</a>
                 </li>
             </ul>
             <div class="tabs-content">
-                <div class="tabs-content__item " id="redemption-of-goods">
+                <div class="tabs-content__item active" id="redemption-of-goods">
                     <!--    Товар №1    -->
                     <div class="product">
                         <div class="product__link" onclick="this.parentElement.classList.toggle('active')">
-                            <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
-                            <strong class="grow-1">Товар №1</strong>
-                            <button class="icon-btn icon-btn--white mr-10">
-                                <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
-                            </button>
+                            <div class="d-flex align-center grow-1">
+                                <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
+                                <strong class="grow-1">Товар №1</strong>
+                                <button class="icon-btn icon-btn--white mr-10">
+                                    <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
+                                </button>
+                            </div>
                         </div>
 
                         <div class="product__detail">
@@ -129,7 +134,7 @@
                             <div class="mb-20">
                                 <p class="text mb-5">Суммарная стоимость товарных позиций по данной ссылке</p>
                                 <div class="d-flex align-center">
-                                    <input type="text" class="input grow-1 mr-10" readonly value="42 540">
+                                    <input type="text" class="input grow-1 mr-10" disabled value="42 540">
                                     <span class="shrink-0">¥, юаней</span>
                                 </div>
                             </div>
@@ -137,7 +142,7 @@
                             <p class="text mb-10">Дополнительные параметры:</p>
                             <div class="w-100 mb-10">
                                 <label class="checkbox">
-                                    <input type="checkbox" name="" class="input-hide" checked>
+                                    <input type="checkbox" name="" class="input-hide" checked disabled>
                                     <span class="checkbox__icon mr-10">
                                         <svg width="10" height="8"><use href="#i-check"></use></svg>
                                     </span>
@@ -146,7 +151,7 @@
                             </div>
                             <div class="w-100 mb-10">
                                 <label class="checkbox">
-                                    <input type="checkbox" name="" class="input-hide">
+                                    <input type="checkbox" name="" class="input-hide" disabled>
                                     <span class="checkbox__icon mr-10">
                                         <svg width="10" height="8"><use href="#i-check"></use></svg>
                                     </span>
@@ -156,7 +161,7 @@
 
                             <div>
                                 <span class="input-text">Комментарий:</span>
-                                <textarea name="" class="input input--muted input--textarea" readonly
+                                <textarea name="" class="input input--muted input--textarea" disabled
                                           placeholder="Suspendisse potenti. Morbi laoreet blandit leo, vitae dignissim velit consectetur non. Aliquam at risus ac felis egestas tempus."></textarea>
                             </div>
                         </div>
@@ -164,11 +169,13 @@
                     <!--    Товар №2    -->
                     <div class="product">
                         <div class="product__link" onclick="this.parentElement.classList.toggle('active')">
-                            <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
-                            <strong class="grow-1">Товар №2</strong>
-                            <button class="icon-btn icon-btn--white mr-10">
-                                <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
-                            </button>
+                            <div class="d-flex align-center grow-1">
+                                <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
+                                <strong class="grow-1">Товар №2</strong>
+                                <button class="icon-btn icon-btn--white mr-10">
+                                    <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
+                                </button>
+                            </div>
                         </div>
 
                         <div class="product__detail">
@@ -214,7 +221,7 @@
                             <div class="mb-20">
                                 <p class="text mb-5">Суммарная стоимость товарных позиций по данной ссылке</p>
                                 <div class="d-flex align-center">
-                                    <input type="text" class="input grow-1 mr-10" readonly value="42 540">
+                                    <input type="text" class="input grow-1 mr-10" disabled value="42 540">
                                     <span class="shrink-0">¥, юаней</span>
                                 </div>
                             </div>
@@ -222,7 +229,7 @@
                             <p class="text mb-10">Дополнительные параметры:</p>
                             <div class="w-100 mb-10">
                                 <label class="checkbox">
-                                    <input type="checkbox" name="" class="input-hide" checked>
+                                    <input type="checkbox" name="" class="input-hide" checked disabled>
                                     <span class="checkbox__icon mr-10">
                                         <svg width="10" height="8"><use href="#i-check"></use></svg>
                                     </span>
@@ -231,7 +238,7 @@
                             </div>
                             <div class="w-100 mb-10">
                                 <label class="checkbox">
-                                    <input type="checkbox" name="" class="input-hide">
+                                    <input type="checkbox" name="" class="input-hide" disabled>
                                     <span class="checkbox__icon mr-10">
                                         <svg width="10" height="8"><use href="#i-check"></use></svg>
                                     </span>
@@ -241,19 +248,21 @@
 
                             <div>
                                 <span class="input-text">Комментарий:</span>
-                                <textarea name="" class="input input--muted input--textarea" readonly
+                                <textarea name="" class="input input--muted input--textarea" disabled
                                           placeholder="Suspendisse potenti. Morbi laoreet blandit leo, vitae dignissim velit consectetur non. Aliquam at risus ac felis egestas tempus."></textarea>
                             </div>
                         </div>
                     </div>
                     <!--    Товар №3    -->
-                    <div class="product active">
+                    <div class="product">
                         <div class="product__link" onclick="this.parentElement.classList.toggle('active')">
-                            <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
-                            <strong class="grow-1">Товар №3</strong>
-                            <button class="icon-btn icon-btn--white mr-10">
-                                <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
-                            </button>
+                            <div class="d-flex align-center grow-1">
+                                <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
+                                <strong class="grow-1">Товар №3</strong>
+                                <button class="icon-btn icon-btn--white mr-10">
+                                    <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
+                                </button>
+                            </div>
                         </div>
 
                         <div class="product__detail">
@@ -299,7 +308,7 @@
                             <div class="mb-20">
                                 <p class="text mb-5">Суммарная стоимость товарных позиций по данной ссылке</p>
                                 <div class="d-flex align-center">
-                                    <input type="text" class="input grow-1 mr-10" readonly value="42 540">
+                                    <input type="text" class="input grow-1 mr-10" disabled value="42 540">
                                     <span class="shrink-0">¥, юаней</span>
                                 </div>
                             </div>
@@ -307,7 +316,7 @@
                             <p class="text mb-10">Дополнительные параметры:</p>
                             <div class="w-100 mb-10">
                                 <label class="checkbox">
-                                    <input type="checkbox" name="" class="input-hide" checked>
+                                    <input type="checkbox" name="" class="input-hide" checked disabled>
                                     <span class="checkbox__icon mr-10">
                                         <svg width="10" height="8"><use href="#i-check"></use></svg>
                                     </span>
@@ -316,7 +325,7 @@
                             </div>
                             <div class="w-100 mb-10">
                                 <label class="checkbox">
-                                    <input type="checkbox" name="" class="input-hide">
+                                    <input type="checkbox" name="" class="input-hide" disabled>
                                     <span class="checkbox__icon mr-10">
                                         <svg width="10" height="8"><use href="#i-check"></use></svg>
                                     </span>
@@ -326,13 +335,13 @@
 
                             <div>
                                 <span class="input-text">Комментарий:</span>
-                                <textarea name="" class="input input--muted input--textarea" readonly
+                                <textarea name="" class="input input--muted input--textarea" disabled
                                           placeholder="Suspendisse potenti. Morbi laoreet blandit leo, vitae dignissim velit consectetur non. Aliquam at risus ac felis egestas tempus."></textarea>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="tabs-content__item p-20 active" id="additional-services">
+                <div class="tabs-content__item p-20 " id="additional-services">
                     <div class="mb-30">
                         <div class="input-text">Выставить доп. счет по данному заказу</div>
                         <div class="relative w-100">
@@ -362,7 +371,7 @@
 
                     <div class="mb-30">
                         <span class="input-text">Комментарий:</span>
-                        <textarea name="" class="input input--textarea input--muted" placeholder="Текст комментария"></textarea>
+                        <textarea name="" class="input input--textarea input--muted" placeholder="Текст комментария для пользователя"></textarea>
                     </div>
 
                     <div class="d-flex flex-end mb-40">
@@ -405,8 +414,8 @@
                             </div>
 
                             <div class="mb-30">
-                                <span class="input-text">Комментарий:</span>
-                                <textarea name="" class="input input--textarea input--muted" placeholder="Текст комментария"></textarea>
+                                <span class="input-text">Добавить комментарий:</span>
+                                <textarea name="" class="input input--textarea input--muted" placeholder="Текст комментария для пользователя"></textarea>
                             </div>
 
                             <div class="d-flex flex-end mb-20">
