--- a/redactor-orders.html
+++ b/redactor-orders.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ZZ-logistics вход</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="mobile-body">
@@ -12,7 +12,7 @@
     <include src="build/img/sprite.svg"></include>
 </div>
 
-<div class="container">
+<div class="container menu-padding">
     <div class="pt-30">
         <div class="small-logo">
             <svg width="13" height="15"><use href="#logo-sm"></use></svg>
@@ -26,11 +26,13 @@
         <!--    Товар №1    -->
         <div class="product">
             <div class="product__link">
-                <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
-                <strong class="grow-1">Товар №1</strong>
-                <button class="icon-btn icon-btn--white mr-10" onclick="this.parentElement.parentElement.classList.toggle('active')">
-                    <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
-                </button>
+                <div class="d-flex align-center grow-1 mr-10" onclick="this.parentElement.parentElement.classList.toggle('active')">
+                    <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
+                    <strong class="grow-1">Товар №1</strong>
+                    <button class="icon-btn icon-btn--white">
+                        <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
+                    </button>
+                </div>
                 <button class="icon-btn icon-btn--white mr-10">
                     <svg width="15" height="15"><use href="#i-edit"></use></svg>
                 </button>
@@ -117,11 +119,13 @@
         <!--    Товар №2    -->
         <div class="product ">
             <div class="product__link">
-                <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
-                <strong class="grow-1">Товар №2</strong>
-                <button class="icon-btn icon-btn--white mr-10" onclick="this.parentElement.parentElement.classList.toggle('active')">
-                    <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
-                </button>
+                <div class="d-flex align-center grow-1 mr-10" onclick="this.parentElement.parentElement.classList.toggle('active')">
+                    <svg class="mr-10 shrink-0" width="19" height="20"><use href="#i-box2"></use></svg>
+                    <strong class="grow-1">Товар №1</strong>
+                    <button class="icon-btn icon-btn--white">
+                        <svg class="product__arrow" width="6" height="10"><use href="#i-arrow"></use></svg>
+                    </button>
+                </div>
                 <button class="icon-btn icon-btn--white mr-10">
                     <svg width="15" height="15"><use href="#i-edit"></use></svg>
                 </button>
@@ -206,6 +210,53 @@
             </div>
         </div>
 
+
+        <nav class="menu">
+            <ul class="menu__list reset-list">
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        <svg width="29" height="27">
+                            <use href="#i-home"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        <svg width="29" height="31">
+                            <use href="#i-box"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        <svg width="36" height="23">
+                            <use href="#i-delivery"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        <svg width="33" height="25">
+                            <use href="#i-referal"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link identifier">
+                        <svg width="33" height="23">
+                            <use href="#i-message"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">
+                        <svg width="26" height="26">
+                            <use href="#i-menu"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
 
