правки по страницам

--- a/referral-program.html
+++ b/referral-program.html
@@ -57,7 +57,7 @@
                 <div class="bonus__arrow bonus__arrow--right">
                     <svg width="30" height="24"><use href="#i-big-arrow"></use></svg>
                 </div>
-                <img src="img/VectorSmartObject22.png" alt="">
+                <img src="img/refferalnay-image.svg" alt="">
             </div>
 
             <div class="bonus__text mb-30">
