add payment pages

--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
     <li>
         <a href="manager-orders.html">менеджер заказов</a>
     </li>
+    <li>
+        <a href="sberbank.html">баланса СБЕРБАНК</a>
+    </li>
+    <li>
+        <a href="Western-Union.html">баланса Western Union</a>
+    </li>
+    <li>
+        <a href="ALIPAY.html">баланса ALIPAY</a>
+    </li>
+    <li>
+        <a href="WeChat.html">баланса WeChat</a>
+    </li>
 </ul>
 
 </body>
