--- a/redactor-orders.html
+++ b/redactor-orders.html
@@ -12,7 +12,7 @@
     <include src="build/img/sprite.svg"></include>
 </div>
 
-<div class="container menu-padding">
+<div class="container to-pay-padding">
     <div class="pt-30">
         <div class="small-logo">
             <svg width="13" height="15"><use href="#logo-sm"></use></svg>
@@ -45,7 +45,7 @@
                 <div class="mb-20">
                     <p class="text mb-5">Ссылка на товар</p>
                     <div class="d-flex">
-                        <input type="text" class="input input--muted grow-1 mr-10" readonly value="https://detail.1688.com/pic/5585...">
+                        <input type="text" class="input input--muted grow-1 mr-10" disabled value="https://detail.1688.com/pic/5585...">
                         <a href="#" class="add-file add-file--sm">
                             <input type="file" class="input-hide">
                             <svg width="24" height="20"><use href="#i-link-arrow"></use></svg>
@@ -73,7 +73,7 @@
                 <div class="mb-20">
                     <p class="text mb-5">Скриншот с модификациями товара</p>
                     <div class="d-flex">
-                        <input type="text" class="input input--muted grow-1 mr-10" readonly value="https://detail.1688.com/pic/5585...">
+                        <input type="text" class="input input--muted grow-1 mr-10" disabled value="https://detail.1688.com/pic/5585...">
                         <a href="#" class="add-file add-file--sm">
                             <input type="file" class="input-hide">
                             <svg width="24" height="20"><use href="#i-link-arrow"></use></svg>
@@ -84,7 +84,7 @@
                 <div class="mb-20">
                     <p class="text mb-5">Суммарная стоимость товарных позиций по данной ссылке</p>
                     <div class="d-flex align-center">
-                        <input type="text" class="input grow-1 mr-10" readonly value="42 540">
+                        <input type="text" class="input grow-1 mr-10" disabled value="42 540">
                         <span class="shrink-0">¥, юаней</span>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                 <p class="text mb-10">Дополнительные параметры:</p>
                 <div class="w-100 mb-10">
                     <label class="checkbox">
-                        <input type="checkbox" name="" class="input-hide" checked>
+                        <input type="checkbox" name="" class="input-hide" checked disabled>
                         <span class="checkbox__icon mr-10">
                             <svg width="10" height="8"><use href="#i-check"></use></svg>
                         </span>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="w-100 mb-10">
                     <label class="checkbox">
-                        <input type="checkbox" name="" class="input-hide">
+                        <input type="checkbox" name="" class="input-hide" disabled>
                         <span class="checkbox__icon mr-10">
                             <svg width="10" height="8"><use href="#i-check"></use></svg>
                         </span>
@@ -111,7 +111,7 @@
 
                 <div class="mb-10">
                     <span class="input-text">Комментарий:</span>
-                    <textarea name="" class="input input--muted input--textarea" readonly
+                    <textarea name="" class="input input--muted input--textarea" disabled
                               placeholder="Suspendisse potenti. Morbi laoreet blandit leo, vitae dignissim velit consectetur non. Aliquam at risus ac felis egestas tempus."></textarea>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                 <div class="mb-20">
                     <p class="text mb-5">Ссылка на товар</p>
                     <div class="d-flex">
-                        <input type="text" class="input input--muted grow-1 mr-10" readonly value="https://detail.1688.com/pic/5585...">
+                        <input type="text" class="input input--muted grow-1 mr-10" disabled value="https://detail.1688.com/pic/5585...">
                         <a href="#" class="add-file add-file--sm">
                             <input type="file" class="input-hide">
                             <svg width="24" height="20"><use href="#i-link-arrow"></use></svg>
@@ -166,7 +166,7 @@
                 <div class="mb-20">
                     <p class="text mb-5">Скриншот с модификациями товара</p>
                     <div class="d-flex">
-                        <input type="text" class="input input--muted grow-1 mr-10" readonly value="https://detail.1688.com/pic/5585...">
+                        <input type="text" class="input input--muted grow-1 mr-10" disabled value="https://detail.1688.com/pic/5585...">
                         <a href="#" class="add-file add-file--sm">
                             <input type="file" class="input-hide">
                             <svg width="24" height="20"><use href="#i-link-arrow"></use></svg>
@@ -177,7 +177,7 @@
                 <div class="mb-20">
                     <p class="text mb-5">Суммарная стоимость товарных позиций по данной ссылке</p>
                     <div class="d-flex align-center">
-                        <input type="text" class="input grow-1 mr-10" readonly value="42 540">
+                        <input type="text" class="input grow-1 mr-10" disabled value="42 540">
                         <span class="shrink-0">¥, юаней</span>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                 <p class="text mb-10">Дополнительные параметры:</p>
                 <div class="w-100 mb-10">
                     <label class="checkbox">
-                        <input type="checkbox" name="" class="input-hide" checked>
+                        <input type="checkbox" name="" class="input-hide" checked disabled>
                         <span class="checkbox__icon mr-10">
                             <svg width="10" height="8"><use href="#i-check"></use></svg>
                         </span>
@@ -194,7 +194,7 @@
                 </div>
                 <div class="w-100 mb-10">
                     <label class="checkbox">
-                        <input type="checkbox" name="" class="input-hide">
+                        <input type="checkbox" name="" class="input-hide" disabled>
                         <span class="checkbox__icon mr-10">
                             <svg width="10" height="8"><use href="#i-check"></use></svg>
                         </span>
@@ -204,12 +204,80 @@
 
                 <div class="mb-10">
                     <span class="input-text">Комментарий:</span>
-                    <textarea name="" class="input input--muted input--textarea" readonly
+                    <textarea name="" class="input input--muted input--textarea" disabled
                               placeholder="Suspendisse potenti. Morbi laoreet blandit leo, vitae dignissim velit consectetur non. Aliquam at risus ac felis egestas tempus."></textarea>
                 </div>
             </div>
         </div>
 
+        <div class="to-pay">
+            <div class="to-pay__link" onclick="this.parentElement.classList.toggle('active')">
+                <div class="d-flex align-center">
+                    <span class="mr-15">
+                        <svg width="20" height="20"><use href="#i-cart"></use></svg>
+                    </span>
+                    <strong class="text-uppercase">к оплате</strong>
+                </div>
+                <div class="d-flex align-center">
+                    <strong class="to-pay__price">9 367 059 ¥</strong>
+                    <button class="btn btn--outline btn--auto">
+                        <svg width="6" height="10"><use href="#i-arrow"></use></svg>
+                    </button>
+                </div>
+            </div>
+            <div class="to-pay__detail">
+                <div class="d-flex justify-between mb-10">
+                    <span>Стоимость товара</span>
+                    <strong>1250</strong>
+                </div>
+                <div class="d-flex justify-between mb-10">
+                    <span>Комиссия платформы</span>
+                    <strong>55</strong>
+                </div>
+                <div class="d-flex justify-between mb-20">
+                    <span>Итоговая стоимость</span>
+                    <strong>1755</strong>
+                </div>
+
+                <hr class="clear-line clear-line--sm mb-10">
+
+                <div class="text--muted mb-30">
+                    <div class="d-flex justify-between mb-10 relative">
+                        <div class="d-flex">
+                            <span>Доставка по Китаю</span>
+                            <div class="tooltip ml-5">
+                                <span onclick="this.classList.toggle('active')">
+                                    <svg width="12" height="14"><use href="#i-info"></use></svg>
+                                </span>
+                                <div class="tooltip__content">
+                                    <p class="text">Architecto blanditiis commodi deleniti ducimus iusto laborum obcaecati quisquam recusandae sint vel?</p>
+                                </div>
+                            </div>
+                        </div>
+                        <strong>0</strong>
+                    </div>
+                    <div class="d-flex justify-between mb-10 relative">
+                        <div class="d-flex">
+                            <span>Доп. услуги</span>
+                            <div class="tooltip ml-5">
+                                    <span onclick="this.classList.toggle('active')">
+                                        <svg width="12" height="14"><use href="#i-info"></use></svg>
+                                    </span>
+                                <div class="tooltip__content">
+                                    <p class="text">Architecto blanditiis commodi deleniti ducimus iusto laborum obcaecati quisquam recusandae sint vel?</p>
+                                </div>
+                            </div>
+                        </div>
+                        <strong>0</strong>
+                    </div>
+                </div>
+
+                <a href="#" class="btn btn--yellow">
+                    <span>Сохранить</span>
+                    <svg width="6" height="10"><use href="#i-arrow"></use></svg>
+                </a>
+            </div>
+        </div>
 
         <nav class="menu">
             <ul class="menu__list reset-list">
