--- a/WeChat.html
+++ b/WeChat.html
@@ -131,10 +131,9 @@
                 <p class="text mb-5">Или предоставьте скриншот из личного кабинета банкинга об успешной оплате</p>
                 <div class="d-flex">
                     <input type="text" class="input input--muted grow-1 mr-10" placeholder="">
-                    <label class="add-file add-file--sm">
-                        <input type="file" class="input-hide">
+                    <button type="button" class="add-file add-file--sm">
                         <svg width="20" height="20"><use href="#i-add"></use></svg>
-                    </label>
+                    </button>
                 </div>
             </div>
             <div class="d-flex align-center">
