--- a/order-created.html
+++ b/order-created.html
@@ -21,19 +21,19 @@
 
         <ul class="reset-list">
             <li class="d-flex justify-between mb-10">
-                <strong>Номер заказа:</strong>
+                <span>Номер заказа:</span>
                 <span>№1584558</span>
             </li>
             <li class="d-flex justify-between mb-10">
-                <strong>Дата создания:</strong>
+                <span>Дата создания:</span>
                 <span>21.04.2019</span>
             </li>
             <li class="d-flex justify-between mb-10">
-                <strong>Статус заказа:</strong>
+                <span>Статус заказа:</span>
                 <span>Не оплачен</span>
             </li>
             <li class="d-flex justify-between">
-                <strong>Сумма заказа:</strong>
+                <span>Сумма заказа:</span>
                 <span>1 257 ¥, юаней</span>
             </li>
         </ul>
