add all bank pages

--- a/WeChat.html
+++ b/WeChat.html
@@ -51,7 +51,7 @@
         <div class="mb-15">
             <p class="text mb-5">Cумма к пополнению</p>
             <div class="d-flex align-center">
-                <input type="text" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
+                <input type="number" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
                 <span class="shrink-0">$, доллары</span>
             </div>
         </div>
@@ -70,31 +70,31 @@
                     <img src="img/WeChat.png" alt="">
                 </div>
                 <div class="bank__content">
-                    <li class="d-flex align-center">
+                    <div class="d-flex align-center">
                         <span class="first">WeChat ID:</span>
                         <strong class="grow-1">tosrussia</strong>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <span class="first">QR код для оплаты:</span>
                         <button class="btn btn--outline btn--auto" onclick="document.getElementById('modal').classList.add('active')">
                             <span>посмотреть</span>
                             <svg width="6" height="10"><use href="#i-arrow"></use></svg>
                         </button>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <span class="first">Комиссия сервиса:</span>
                         <div class="grow-1 d-flex align-center">
                             <span class="bank__percent">1%</span>
                             <small class="text--muted">Ваш банк может взять дополнительную комиссию</small>
                         </div>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <span class="first">Нужно перевести:</span>
                         <div class="grow-1 d-flex align-center">
                             <strong class="bank__percent">1 000 000</strong>
                             <span class="small"><small>¥, юаней с учетом комиссии 1%</small></span>
                         </div>
-                    </li>
+                    </div>
                 </div>
             </div>
         </div>
