--- a/Western-Union.html
+++ b/Western-Union.html
@@ -51,7 +51,7 @@
         <div class="mb-15">
             <p class="text mb-5">Cумма к пополнению</p>
             <div class="d-flex align-center">
-                <input type="text" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
+                <input type="number" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
                 <span class="shrink-0">$, доллары</span>
             </div>
         </div>
@@ -80,28 +80,28 @@
                     <img src="img/western_union.png" alt="">
                 </div>
                 <div class="bank__content">
-                    <li class="d-flex align-center">
+                    <div class="d-flex align-center">
                         <span class="first">Направление перевода:</span>
                         <strong class="grow-1 text-uppercase self-start">Китай, г.Гуанчжоу</strong>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <span class="first">ФИО получателя:</span>
                         <strong class="grow-1 text-uppercase">jon yan</strong>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <span class="first">Комиссия сервиса:</span>
                         <div class="grow-1 d-flex align-center">
                             <span class="bank__percent">0%</span>
                             <small>Мы не берем комиссию, но ее может взять ваш банк</small>
                         </div>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <strong class="first">Нужно перевести:</strong>
                         <div class="grow-1 d-flex align-center">
                             <strong class="bank__percent">1 000 000</strong>
-                            <p class="text">$, долларов</p>
+                            <span class="text">$, долларов</span>
                         </div>
-                    </li>
+                    </div>
                 </div>
             </div>
         </div>
