--- a/alfa-bank.html
+++ b/alfa-bank.html
@@ -65,34 +65,34 @@
 
         <p class="text mb-15">Вам нужно осуществить перевод средств по следующим реквизитам:</p>
         <div class="border-bottom mb-30">
-            <div class="bank bank--alipay mb-30">
+            <div class="bank bank--alfabank mb-30">
                 <div class="bank__logo">
-                    <img src="img/Alipay.png" alt="">
+                    <img src="img/logo-alfa.png" alt="">
                 </div>
                 <div class="bank__content">
                     <div class="d-flex align-center">
-                        <span class="first">№ пользователя:</span>
-                        <strong class="grow-1">13128641323</strong>
+                        <span class="first">Карта получателя:</span>
+                        <strong class="grow-1 text-uppercase">4100 0000 0000 1212</strong>
                         <button class="copy-btn">
                             <svg width="18" height="22"><use href="#i-copy"></use></svg>
                         </button>
                     </div>
                     <div class="d-flex align-center">
-                        <span class="first">Имя получателя:</span>
-                        <strong class="text-uppercase">KHAYRUTDINOVALEXEY</strong>
+                        <span class="first">ФИО получателя:</span>
+                        <strong class="grow-1 text-uppercase">jon yan</strong>
                     </div>
                     <div class="d-flex align-center">
                         <span class="first">Комиссия сервиса:</span>
                         <div class="grow-1 d-flex align-center">
-                            <span class="bank__percent">1%</span>
-                            <small>Ваш банк может взять дополнительную комиссию</small>
+                            <span class="bank__percent">0%</span>
+                            <small class="text--muted">Мы не берем комиссию, но ее может взять ваш банк</small>
                         </div>
                     </div>
                     <div class="d-flex align-center">
-                        <span class="first">Нужно перевести:</span>
+                        <strong class="first">Нужно перевести:</strong>
                         <div class="grow-1 d-flex align-center">
                             <strong class="bank__percent">1 000 000</strong>
-                            <span class="text">$, долларов</span>
+                            <span class="small"><small>₽, рублей с учетом комиссии 1%</small></span>
                         </div>
                     </div>
                 </div>
