--- a/buyback-orders.html
+++ b/buyback-orders.html
@@ -75,7 +75,7 @@
                 <div class="mb-20">
                     <p class="text mb-5">Укажите суммарную стоимость товарных позиций по данной ссылке</p>
                     <div class="d-flex align-center">
-                        <input type="text" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
+                        <input type="number" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
                         <span class="shrink-0">¥, юаней</span>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                 <div class="mb-20">
                     <p class="text mb-5">Укажите суммарную стоимость товарных позиций по данной ссылке</p>
                     <div class="d-flex align-center">
-                        <input type="text" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
+                        <input type="number" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
                         <span class="shrink-0">¥, юаней</span>
                     </div>
                 </div>
