--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
     <li>
         <a href="WeChat.html">баланса WeChat</a>
     </li>
+    <li>
+        <a href="yandex-dengi.html">Яндекс деньги</a>
+    </li>
+    <li>
+        <a href="qiwi.html">Qiwi</a>
+    </li>
+    <li>
+        <a href="tinkoff.html">Tinkoff</a>
+    </li>
+    <li>
+        <a href="alfa-bank.html">Alfa bank</a>
+    </li>
 </ul>
 
 </body>
