--- a/sberbank.html
+++ b/sberbank.html
@@ -51,7 +51,7 @@
         <div class="mb-15">
             <p class="text mb-5">Cумма к пополнению</p>
             <div class="d-flex align-center">
-                <input type="text" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
+                <input type="number" class="input input--muted grow-1 mr-10" placeholder="Введите сумму">
                 <span class="shrink-0">¥, юаней</span>
             </div>
         </div>
@@ -77,31 +77,31 @@
                     <img src="img/SberBankRosiji.png" alt="">
                 </div>
                 <div class="bank__content">
-                    <li class="d-flex align-center">
+                    <div class="d-flex align-center">
                         <span class="first">Карта получателя:</span>
                         <strong class="grow-1 text-uppercase">4100 0000 0000 1212</strong>
                         <button class="copy-btn">
                             <svg width="18" height="22"><use href="#i-copy"></use></svg>
                         </button>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <span class="first">ФИО получателя:</span>
                         <strong class="grow-1 text-uppercase">jon yan</strong>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <span class="first">Комиссия сервиса:</span>
                         <div class="grow-1 d-flex align-center">
                             <span class="bank__percent">0%</span>
-                            <small>Мы не берем комиссию, но ее может взять ваш банк</small>
+                            <small class="text--muted">Мы не берем комиссию, но ее может взять ваш банк</small>
                         </div>
-                    </li>
-                    <li class="d-flex align-center">
+                    </div>
+                    <div class="d-flex align-center">
                         <strong class="first">Нужно перевести:</strong>
                         <div class="grow-1 d-flex align-center">
                             <strong class="bank__percent">1 000 000</strong>
-                            <p class="text">₽, рублей</p>
+                            <span class="text">₽, рублей</span>
                         </div>
-                    </li>
+                    </div>
                 </div>
             </div>
 
