--- a/buyback-orders.html
+++ b/buyback-orders.html
@@ -12,7 +12,7 @@
     <include src="build/img/sprite.svg"></include>
 </div>
 
-<div class="container po-pay-padding">
+<div class="container to-pay-padding">
     <div class="pt-30">
         <div class="small-logo">
             <svg width="13" height="15"><use href="#logo-sm"></use></svg>
