--- a/index.html
+++ b/index.html
@@ -89,6 +89,36 @@
     <li>
         <a href="alfa-bank.html">Alfa bank</a>
     </li>
+    <li>
+        <a href="additional-info-on-request.html">доп инфа по заявке</a>
+    </li>
+    <li>
+        <a href="order-created-successfully.html">заказ успешно создан</a>
+    </li>
+    <li>
+        <a href="shipping-china-history.html">отправки из китая история отправок</a>
+    </li>
+    <li>
+        <a href="shipping-history.html">история отправок</a>
+    </li>
+    <li>
+        <a href="stock-orders.html">заказы на складе</a>
+    </li>
+    <li>
+        <a href="Dispatch-from-China-ORDER-IN-STOCK.html">отправки из китая ЗАКАЗЫ НА СКЛАДЕ</a>
+    </li>
+    <li>
+        <a href="Dispatch-from-China-ORDER-IN-STOCK-selected.html">отправки из китая ЗАКАЗЫ НА СКЛАДЕ уже выбрали</a>
+    </li>
+    <li>
+        <a href="shipping-from-china.html">отправки из китая</a>
+    </li>
+    <li>
+        <a href="leave-reviews.html">оставить отзывы</a>
+    </li>
+    <li>
+        <a href="reviews.html">отзывы</a>
+    </li>
 </ul>
 
 </body>
