--- a/manager-orders.html
+++ b/manager-orders.html
@@ -358,7 +358,7 @@
 
                     <div class="d-flex align-center mb-20">
                         <span class="text mr-20">Укажите<br> сумму</span>
-                        <input type="text" class="input input--select mr-10">
+                        <input type="number" class="input input--select mr-10">
                         <div class="relative shrink-0">
                             <svg class="select-icon" width="10" height="6"><use href="#i-select-arrow"></use></svg>
                             <select class="input input--select">
@@ -402,7 +402,7 @@
 
                             <div class="d-flex align-center mb-20">
                                 <span class="text mr-20">Сумма к<br> возврату</span>
-                                <input type="text" class="input input--select mr-10">
+                                <input type="number" class="input input--select mr-10">
                                 <div class="relative shrink-0">
                                     <svg class="select-icon" width="10" height="6"><use href="#i-select-arrow"></use></svg>
                                     <select class="input input--select">
