--- a/transaction-history.html
+++ b/transaction-history.html
@@ -66,13 +66,13 @@
                     </div>
                 </div>
                 <div class="transaction__detail">
-                    <span class="text--muted">Тип операции:</span>
+                    <p class="text text--muted mb-5">Тип операции:</span>
                     <p class="text">Оплата зказа на выкуп с китайских сайтов</p>
 
-                    <span class="text--muted">Статус операции:</span>
+                    <p class="text text--muted mb-5">Статус операции:</span>
                     <p class="text">Оплачено</p>
 
-                    <span class="text--muted">Дополнительная информация:</span>
+                    <p class="text text--muted mb-5">Дополнительная информация:</span>
                     <div class="d-flex justify-between align-end">
                         <span>Стоимость товара</span>
                         <span>1250</span>
@@ -84,6 +84,13 @@
                     <div class="d-flex justify-between align-end">
                         <span>Итоговая стоимость</span>
                         <span>1305</span>
+                    </div>
+                    <div class="transaction__comment">
+                        <div class="grow-1">
+                            <p class="text text--muted mb-5">Комментарий:</span>
+                            <p class="text">Aenean nec lectus in velit accumsan mollis a eget metus. Morbi elementum justo tortor, a ornare risus sodales vitae.</p>
+                        </div>
+                        <img class="comment-img" src="img/image4.png" alt="">
                     </div>
                 </div>
             </div>
@@ -99,13 +106,13 @@
                     </div>
                 </div>
                 <div class="transaction__detail">
-                    <span class="text--muted">Тип операции:</span>
+                    <p class="text text--muted mb-5">Тип операции:</span>
                     <p class="text">Пополнение баланса личного кабинета (ЮАНИ)</p>
 
-                    <span class="text--muted">Статус операции:</span>
+                    <p class="text text--muted mb-5">Статус операции:</span>
                     <p class="text">Исполнено</p>
 
-                    <span class="text--muted">Дополнительная информация:</span>
+                    <p class="text text--muted mb-5">Дополнительная информация:</span>
                     <div class="d-flex justify-between align-end">
                         <span>Метод оплаты:</span>
                         <span>перевод на карту Сбербанка</span>
@@ -136,13 +143,13 @@
                     </div>
                 </div>
                 <div class="transaction__detail">
-                    <span class="text--muted">Тип операции:</span>
+                    <p class="text text--muted mb-5">Тип операции:</span>
                     <p class="text">Начисление реферального бонуса</p>
 
-                    <span class="text--muted">Статус операции:</span>
+                    <p class="text text--muted mb-5">Статус операции:</span>
                     <p class="text">В обработке</p>
 
-                    <span class="text--muted">Дополнительная информация:</span>
+                    <p class="text text--muted mb-5">Дополнительная информация:</span>
                     <div class="d-flex justify-between align-end">
                         <span>Начисление реферального бонуса за участника:</span>
                         <span>e*******i@gmail.com</span>
@@ -169,13 +176,13 @@
                     </div>
                 </div>
                 <div class="transaction__detail">
-                    <span class="text--muted">Тип операции:</span>
+                    <p class="text text--muted mb-5">Тип операции:</span>
                     <p class="text">Вывод средств с баланса личного кабинета</p>
 
-                    <span class="text--muted">Статус операции:</span>
+                    <p class="text text--muted mb-5">Статус операции:</span>
                     <p class="text">В обработке</p>
 
-                    <span class="text--muted">Дополнительная информация:</span>
+                    <p class="text text--muted mb-5">Дополнительная информация:</span>
                     <div class="d-flex justify-between align-end">
                         <span>Метод оплаты:</span>
                         <span>перевод на карту Сбербанка</span>
@@ -206,13 +213,13 @@
                     </div>
                 </div>
                 <div class="transaction__detail">
-                    <span class="text--muted">Тип операции:</span>
+                    <p class="text text--muted mb-5">Тип операции:</span>
                     <p class="text">Вывод средств с баланса личного кабинета</p>
 
-                    <span class="text--muted">Статус операции:</span>
+                    <p class="text text--muted mb-5">Статус операции:</span>
                     <p class="text">В обработке</p>
 
-                    <span class="text--muted">Дополнительная информация:</span>
+                    <p class="text text--muted mb-5">Дополнительная информация:</span>
                     <div class="d-flex justify-between align-end">
                         <span>Метод оплаты:</span>
                         <span>перевод на карту Сбербанка</span>
@@ -243,13 +250,13 @@
                     </div>
                 </div>
                 <div class="transaction__detail">
-                    <span class="text--muted">Тип операции:</span>
+                    <p class="text text--muted mb-5">Тип операции:</span>
                     <p class="text">Вывод средств с баланса личного кабинета</p>
 
-                    <span class="text--muted">Статус операции:</span>
+                    <p class="text text--muted mb-5">Статус операции:</span>
                     <p class="text">В обработке</p>
 
-                    <span class="text--muted">Дополнительная информация:</span>
+                    <p class="text text--muted mb-5">Дополнительная информация:</span>
                     <div class="d-flex justify-between align-end">
                         <span>Метод оплаты:</span>
                         <span>перевод на карту Сбербанка</span>
@@ -280,13 +287,13 @@
                     </div>
                 </div>
                 <div class="transaction__detail">
-                    <span class="text--muted">Тип операции:</span>
+                    <p class="text text--muted mb-5">Тип операции:</span>
                     <p class="text">Вывод средств с баланса личного кабинета</p>
 
-                    <span class="text--muted">Статус операции:</span>
+                    <p class="text text--muted mb-5">Статус операции:</span>
                     <p class="text">В обработке</p>
 
-                    <span class="text--muted">Дополнительная информация:</span>
+                    <p class="text text--muted mb-5">Дополнительная информация:</span>
                     <div class="d-flex justify-between align-end">
                         <span>Метод оплаты:</span>
                         <span>перевод на карту Сбербанка</span>
@@ -317,13 +324,13 @@
                     </div>
                 </div>
                 <div class="transaction__detail">
-                    <span class="text--muted">Тип операции:</span>
+                    <p class="text text--muted mb-5">Тип операции:</span>
                     <p class="text">Вывод средств с баланса личного кабинета</p>
 
-                    <span class="text--muted">Статус операции:</span>
+                    <p class="text text--muted mb-5">Статус операции:</span>
                     <p class="text">В обработке</p>
 
-                    <span class="text--muted">Дополнительная информация:</span>
+                    <p class="text text--muted mb-5">Дополнительная информация:</span>
                     <div class="d-flex justify-between align-end">
                         <span>Метод оплаты:</span>
                         <span>перевод на карту Сбербанка</span>
